--- a/style.css
+++ b/style.css
@@ -30,3 +30,20 @@ body {
     box-sizing: border-box;
     padding-right: 60px;
 }
+#h2-inicio {
+    color: white;
+    margin: 0;
+    padding: 10px;
+}
+.series-container {
+    display: grid;
+    grid-template-columns: repeat(4, 18vw);
+    gap: 50px;
+}
+.series-item img {
+    width: 100%;
+    aspect-ratio: 2 / 3; /* padrão de pôster */
+    object-fit: cover;
+    border-radius: 8px;
+
+}
