--- a/style.css
+++ b/style.css
@@ -14,13 +14,20 @@ body {
     list-style: none;
     padding: 0;
     margin-left: auto;
-    margin-right: 50px;
+    margin-right: 10px;
 }  
-#navList li{
+#navList li a{
+    display: inline-block;
     color: white;
     padding: 20px;
-    cursor: pointer;
+    text-decoration: none;
 
+}
+
+#navList li a:hover{
+    transform: scale(1.2); 
+    color: red;   
+    transition: 0.15s ease; 
 }
 #content {
     background-color: rgb(47, 63, 63);
@@ -37,6 +44,7 @@ body {
 }
 .series-container {
     display: grid;
+    justify-content: center;
     grid-template-columns: repeat(4, 18vw);
     gap: 50px;
 }
@@ -46,4 +54,22 @@ body {
     object-fit: cover;
     border-radius: 8px;
 
+}
+
+.namesite1{
+ font-size: 18px;
+ color: white;   
+ 
+}
+
+.namesite2{
+ font-size: 18px;   
+ color: white;
+}
+
+.estrela-vermelha{
+ width: 24px;
+ height: 24px;  
+ margin-left: 20px;
+ margin-right: 4px;
 }
