--- a/style.css
+++ b/style.css
@@ -39,11 +39,21 @@ body {
     margin: 0;
     padding: 10px;
 }
+
+h2 {
+    color: white;
+}
 .series-container {
     display: grid;
-    justify-content: center;
-    grid-template-columns: repeat(4, 18vw);
-    gap: 50px;
+    grid-template-columns: repeat(4, minmax(160px, 1fr));
+    gap: 40px;
+    width: 100%;
+}
+.filme-container {
+    display: grid;
+    grid-template-columns: repeat(4, minmax(160px, 1fr));
+    gap: 40px;
+    width: 100%;
 }
 .series-item img {
     width: 100%;
@@ -53,6 +63,17 @@ body {
     cursor: pointer;
 }
 .series-item img:hover {
+    transform: scale(1.05); 
+    transition: 0.15s ease; 
+}
+.filme-item img {
+    width: 100%;
+    aspect-ratio: 2 / 3;
+    object-fit: cover;
+    border-radius: 8px;
+    cursor: pointer;
+}
+.filme-item img:hover {
     transform: scale(1.05); 
     transition: 0.15s ease; 
 }
@@ -69,6 +90,11 @@ body {
     color: gold;
 }
 .series-item h3 {
+    color: white;
+    margin: 10px 0;
+    font-size: 24px;
+}
+.filme-item h3 {
     color: white;
     margin: 10px 0;
     font-size: 24px;
@@ -139,3 +165,80 @@ body {
     color: #00ff00;
 }
 hr { margin-bottom: 10px; }
+
+#inicio{
+    color: white;
+    display: grid;
+    justify-items: center;
+}
+#inicio h1{
+    font-size: 36px;
+}
+#inicio p{
+    font-size: 20px;
+    max-width: 800px;
+    text-align: center;
+}
+.secao {
+  padding: 60px;
+}
+
+.carousel {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  background-color: rgb(35, 50, 50);
+  padding: 20px;
+  border-radius: 8px;
+  margin-bottom: 20px;
+}
+
+.carousel-track {
+  display: flex;
+  gap: 20px;
+  overflow: hidden;
+  scroll-behavior: smooth;
+  width: 100%;
+}
+
+.arrow {
+  background-color: rgb(31, 39, 39);
+  color: white;
+  border: none;
+  font-size: 32px;
+  cursor: pointer;
+  padding: 10px;
+  border-radius: 8px;
+}
+
+.card {
+  min-width: 180px;
+  background-color: rgb(31, 39, 39);
+  color: white;
+  padding: 10px;
+  border-radius: 8px;
+  text-align: center;
+}
+.card.add {
+  width: 70px;
+  height: 70px;
+  margin: 20px auto;
+  background-color: rgb(67, 82, 82);
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.card.add h3 {
+  margin: 0;
+  font-size: 28px;
+}
+
+.card.add p {
+  margin: 0;
+  font-size: 12px;
+  color: white;
+}
